Required node 18 + upgraded to webpack 5 + modernized gulpfile

--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
 		"lint:scripts:fix": "eslint --fix assets/js/src assets/js/build"
 	},
 	"engines": {
-		"node": "16"
+		"node": "18"
 	},
 	"devDependencies": {
 		"@types/es6-shim": "^0.31.42",
-		"@types/isotope-layout": "^3.0.9",
 		"@types/jquery": "^2.0.46",
-		"autoprefixer": "10.4.5",
-		"eslint": "^8.24.0",
-		"eslint-webpack-plugin": "^2.7.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.50.0",
+		"eslint-webpack-plugin": "^4.0.1",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^8.0.0",
 		"gulp-clean-dir": "^1.0.2",
 		"gulp-composer": "^0.4.5",
-		"gulp-filter": "^7.0.0",
+		"gulp-filter": "^8.0.0",
 		"gulp-if": "^3.0.0",
 		"gulp-livereload": "^4.0.2",
 		"gulp-notify": "^4.0.0",
@@ -36,20 +35,19 @@
 		"gulp-sass": "^5.1.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-wrap": "^0.15.0",
-		"sass": "^1.55.0",
-		"ts-loader": "^8.2.0",
-		"typescript": "^4.8.4",
-		"webpack": "^4.46.0",
-		"webpack-stream": "^6.1.2"
+		"sass": "^1.68.0",
+		"ts-loader": "^9.4.4",
+		"typescript": "^5.2.2",
+		"webpack": "^5.88.2",
+		"webpack-stream": "^7.0.0"
 	},
 	"dependencies": {
-		"@popperjs/core": "^2.11.6",
-		"bootstrap": "^5.2.2",
+		"@popperjs/core": "^2.11.8",
+		"bootstrap": "^5.3.2",
 		"chart.js": "^2.9.3",
 		"hammerjs": "^2.0.8",
-		"intro.js": "^7.0.1",
-		"isotope-layout": "^3.0.6",
-		"jquery": "^3.6.1",
+		"intro.js": "^7.2.0",
+		"jquery": "^3.7.1",
 		"jquery-nice-select": "^1.1.0",
 		"jquery.fancytable": "^1.0.32",
 		"js-big-decimal": "^1.3.10",
