--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ATUM",
 	"version": "2.0.0",
-	"author": "Be Rebel - https://berebel.io",
+	"author": "BE REBEL - https://berebel.studio",
 	"homepage": "https://stockmanagementlabs.com",
 	"private": true,
 	"repository": {
@@ -18,26 +18,26 @@
 		"node": "18"
 	},
 	"devDependencies": {
-		"@types/es6-shim": "^0.31.42",
-		"@types/jquery": "^2.0.46",
+		"@types/es6-shim": "^0.31.45",
+		"@types/jquery": "^2.0.66",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.51.0",
+		"eslint": "^8.55.0",
 		"eslint-webpack-plugin": "^4.0.1",
 		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "^8.0.0",
+		"gulp-autoprefixer": "^9.0.0",
 		"gulp-clean-dir": "^1.0.2",
 		"gulp-composer": "^0.4.5",
-		"gulp-filter": "^8.0.0",
+		"gulp-filter": "^9.0.1",
 		"gulp-if": "^3.0.0",
 		"gulp-livereload": "^4.0.2",
 		"gulp-plumber": "^1.2.1",
 		"gulp-sass": "^5.1.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-wrap": "^0.15.0",
-		"sass": "^1.69.4",
+		"sass": "^1.69.5",
 		"terser-webpack-plugin" : "^5.3.9",
-		"ts-loader": "^9.5.0",
-		"typescript": "^5.2.2",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.3.3",
 		"webpack": "^5.89.0",
 		"webpack-stream": "^7.0.0"
 	},
@@ -51,7 +51,7 @@
 		"jquery-nice-select": "^1.1.0",
 		"jquery.fancytable": "^1.0.32",
 		"lightgallery.js": "^1.4.0",
-		"mathjs" : "^11.11.2",
+		"mathjs" : "^12.2.0",
 		"moment": "^2.29.4",
 		"owl.carousel": "^2.3.4",
 		"sweetalert2": "^11.10.1"
