Use any when 0 is set for step in stock decimals

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "ATUM",
-	"version": "2.0.0",
+	"name": "atum-stock-manager-for-woocommerce",
+	"version": "1.9",
 	"author": "BE REBEL - https://berebel.studio",
 	"homepage": "https://stockmanagementlabs.com",
 	"private": true,
