--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
 		"lint:scripts:fix": "eslint --fix assets/js/src assets/js/build"
 	},
 	"engines": {
-		"node": "20"
+		"node": ">=20"
 	},
 	"devDependencies": {
 		"@types/es6-shim": "^0.31.45",
 		"@types/jquery": "^2.0.68",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.55.0",
+		"autoprefixer": "^10.4.18",
+		"eslint": "^8.57.0",
 		"eslint-webpack-plugin": "^4.0.1",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^9.0.0",
@@ -34,16 +34,16 @@
 		"gulp-sass": "^5.1.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-wrap": "^0.15.0",
-		"sass": "^1.69.5",
-		"terser-webpack-plugin" : "^5.3.9",
+		"sass": "^1.71.1",
+		"terser-webpack-plugin" : "^5.3.10",
 		"ts-loader": "^9.5.1",
-		"typescript": "^5.3.3",
-		"webpack": "^5.89.0",
+		"typescript": "^5.4.2",
+		"webpack": "^5.90.3",
 		"webpack-stream": "^7.0.0"
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
-		"bootstrap": "^5.3.2",
+		"bootstrap": "^5.3.3",
 		"chart.js": "^2.9.3",
 		"hammerjs": "^2.0.8",
 		"intro.js": "^7.2.0",
@@ -51,9 +51,9 @@
 		"jquery-nice-select": "^1.1.0",
 		"jquery.fancytable": "^1.0.32",
 		"lightgallery.js": "^1.4.0",
-		"mathjs" : "^12.3.1",
+		"mathjs" : "^12.4.0",
 		"moment": "^2.29.4",
 		"owl.carousel": "^2.3.4",
-		"sweetalert2": "^11.10.1"
+		"sweetalert2": "^11.10.6"
 	}
 }
