--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"config": {
-		"preferred-install": "dist"
+		"preferred-install": "dist",
+        "plaform-check": false
 	},
 	"require": {
 		"php": ">=7.1",
