--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
 		"lint:scripts:fix": "eslint --fix assets/js/src assets/js/build"
 	},
 	"engines": {
-		"node": ">=20"
+		"node": ">=22"
 	},
 	"devDependencies": {
-		"@stylistic/eslint-plugin": "^2.10.1",
+		"@stylistic/eslint-plugin": "^3.1.0",
 		"@types/es6-shim": "^0.31.45",
-		"@types/jquery": "^2.0.68",
+		"@types/jquery": "2.0.68",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.14.0",
+		"eslint": "^9.20.0",
 		"eslint-webpack-plugin": "^4.2.0",
 		"gulp": "^5.0.0",
 		"gulp-autoprefixer": "^9.0.0",
@@ -32,30 +32,30 @@
 		"gulp-if": "^3.0.0",
 		"gulp-livereload": "^4.0.2",
 		"gulp-plumber": "^1.2.1",
-		"gulp-sass": "^5.1.0",
+		"gulp-sass": "^6.0.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-wrap": "^0.15.0",
-		"sass": "^1.80.6",
-		"sass-loader": "^16.0.3",
-		"ts-loader": "^9.5.1",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.13.0",
-		"webpack": "^5.96.1",
+		"sass": "^1.84.0",
+		"sass-loader": "^16.0.4",
+		"ts-loader": "^9.5.2",
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.23.0",
+		"webpack": "^5.97.1",
 		"webpack-stream": "^7.0.0"
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
-		"chart.js": "^2.9.3",
+		"chart.js": "^2.9.4",
 		"hammerjs": "^2.0.8",
 		"intro.js": "^7.2.0",
 		"jquery": "^3.7.1",
 		"jquery-nice-select": "^1.1.0",
-		"jquery.fancytable": "^1.0.32",
+		"jquery.fancytable": "^1.0.36",
 		"lightgallery.js": "^1.4.0",
 		"mathjs": "^12.4.3",
 		"moment": "^2.30.1",
 		"owl.carousel": "^2.3.4",
-		"sweetalert2-neutral": "^11.14.1-neutral-fix6"
+		"sweetalert2-neutral": "^11.15.9-neutral"
 	}
 }
